option('sox', type: 'feature', value: 'auto', description: 'use sox as input converter')
option('mpg123', type: 'feature', value: 'auto', description: 'use mpg123 as input converter')
option('ogg123', type: 'feature', value: 'auto', description: 'use ogg123 as input converter')
option('scheduler', type: 'feature', value: 'enabled', description: 'enable rt-scheduling')
option('tX_debug', type: 'feature', value: 'disabled', description: 'enable debug output')
option('wav', type: 'feature', value: 'enabled', description: 'enables the built-in wav-loader')
option('alsa', type: 'feature', value: 'auto', description: 'use ALSA for sound output')
option('jack', type: 'feature', value: 'auto', description: 'use JACK for sound output')
option('oss', type: 'feature', value: 'auto', description: 'use OSS for sound output')
option('pulse', type: 'feature', value: 'auto', description: 'use PulseAudio for sound output')
option('x11', type: 'feature', value: 'auto', description: 'include X11 specific code')
option('mad', type: 'feature', value: 'auto', description: 'use libmad as input converter')
option('vorbis', type: 'feature', value: 'auto', description: 'use libvorbis as input converter')
option('audiofile', type: 'feature', value: 'auto', description: 'use audiofile as input converter')
option('legacy', type: 'feature', value: 'disabled', description: 'enable support for old terminatorX files')
option('alsamidi', type: 'feature', value: 'enabled', description: 'use ALSA MIDI input')
option('lrdf', type: 'feature', value: 'auto', description: 'liblrdf support')
option('capabilities', type: 'feature', value: 'enabled', description: 'use rt-scheduling via libpcap')
option('deprecated', type: 'feature', value: 'disabled', description: 'compile without deprecated G*-headers')
option('suidroot', type: 'feature', value: 'auto', description: 'install terminatorX setuid root ')
