themedir = $(datadir)/icons/hicolor
size = 48x48
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	terminatorX.png\
	terminatorX-mime.png

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = \
        terminatorX.png\
	terminatorX.xpm\
        terminatorX-mime.png


EXTRA_DIST = \
	$(icons_DATA)\
	$(pixmaps_DATA)
