themedir = $(datadir)/icons/hicolor
size = 512x512
apps_context = apps
mime_context = mimetypes


mimeiconsdir = $(themedir)/$(size)/$(mime_context)
mimeicons_DATA = \
        terminatorX-mime.png

appiconsdir = $(themedir)/$(size)/$(apps_context)
appicons_DATA = \
	terminatorX.png

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = \
	terminatorX.xpm

EXTRA_DIST = \
	$(mimeicons_DATA)\
	$(appicons_DATA)\
	$(pixmaps_DATA)
