pixmaps_dir = join_paths(get_option('datadir'), 'pixmaps')
icon_dir = join_paths(get_option('datadir'), 'icons', 'hicolor', '512x512')
app_icon_dir = join_paths(icon_dir, 'apps')
mime_icon_dir = join_paths(icon_dir, 'mimetypes')

install_data('org.terminatorx.terminatorX.xpm', install_dir: pixmaps_dir)
install_data('org.terminatorx.terminatorX.png', install_dir: app_icon_dir)
install_data('org.terminatorx.terminatorX.Set.png', install_dir: mime_icon_dir)