SUBDIRS=img

SOURCES=configuration.html \
contact.html \
dragndrop.html \
features.html \
grabmode.html \
guisetup.html \
index.html \
installation.html \
introduction.html \
ladspaplugins.html \
mouseinputsetup.html \
operation.html \
preface.html \
quickstart.html \
requirements.html \
sequencer.html \
soundfileeditor.html \
synchronization.html \
turntablecontrols.html \
manual.ps
