SOURCES=terminatorX-app.xpm\
	terminatorX-mime.xpm\
	terminatorX.mime\
	tx-gnome-install\
	tx-gnome-uninstall\
	terminatorX.desktop\
	README.GNOME

if GNOMEpresent
gnomedir=@gnomedatadir@
gnomeappdir=$(gnomedir)/gnome/apps/Multimedia
gnomeapp_DATA=terminatorX.desktop

mimetypedir=$(gnomedir)/mime-info
mimetype_DATA=terminatorX.keys terminatorX.mime

pixmapdir=$(gnomedir)/pixmap
pixmap_DATA=terminatorX-app.xpm terminatorX-mime.xpm

endif

	
